--- a/font/Cargo.toml
+++ b/font/Cargo.toml
@@ -12,11 +12,12 @@ foreign-types = "0.3"
 log = "0.4"
 
 [target.'cfg(not(target_os = "macos"))'.dependencies]
-servo-fontconfig = { git = "https://github.com/jwilm/rust-fontconfig", branch = "updated-2017-10-8" }
-freetype-rs = "0.13"
+servo-fontconfig = { git = "https://github.com/neowutran/rust-fontconfig" }
+#servo-fontconfig = "0.4.0"
+freetype-rs = { git = "https://github.com/neowutran/freetype-rs"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
-core-foundation = "0.5"
-core-text = "9.1"
-core-graphics = "0.13"
-core-foundation-sys = "0.5"
+core-foundation = "0.6"
+core-text = "10"
+core-graphics = "0.14"
+core-foundation-sys = "0.6"
